lustre/target/tgt_lastrcvd.c
@@ -92,7 +92,7 @@ void tgt_client_free(struct obd_export *exp)
 	if (ted->ted_lr_idx < 0)
 		return;
 	/* Clear bit when lcd is freed */
-	LASSERT(lut->lut_client_bitmap);
+	LASSERT(lut && lut->lut_client_bitmap);
 	if (!test_and_clear_bit(ted->ted_lr_idx, lut->lut_client_bitmap)) {
 		CERROR("%s: client %u bit already clear in bitmap\n",
 		       exp->exp_obd->obd_name, ted->ted_lr_idx);
@@ -156,6 +156,12 @@ static int tgt_client_data_update(const struct lu_env *env,
 	int			 rc = 0;
 
 	ENTRY;
+
+	if (unlikely(tgt == NULL)) {
+		CDEBUG(D_ERROR, "%s: No target for connected export\n",
+			  class_exp2obd(exp)->obd_name);
+		RETURN(-EINVAL);
+	}
 
 	th = dt_trans_create(env, tgt->lut_bottom);
 	if (IS_ERR(th))
@@ -330,7 +336,7 @@ static void tgt_client_epoch_update(const struct lu_env *env,
 	struct lsd_client_data	*lcd = exp->exp_target_data.ted_lcd;
 	struct lu_target	*tgt = class_exp2tgt(exp);
 
-	LASSERT(tgt->lut_bottom);
+	LASSERT(tgt && tgt->lut_bottom);
 	/** VBR: set client last_epoch to current epoch */
 	if (lcd->lcd_last_epoch >= tgt->lut_lsd.lsd_start_epoch)
 		return;
@@ -534,7 +540,7 @@ int tgt_client_new(const struct lu_env *env, struct obd_export *exp)
 
 	ENTRY;
 
-	LASSERT(tgt->lut_client_bitmap != NULL);
+	LASSERT(tgt && tgt->lut_client_bitmap != NULL);
 	if (!strcmp(ted->ted_lcd->lcd_uuid, tgt->lut_obd->obd_uuid.uuid))
 		RETURN(0);
 
@@ -600,7 +606,7 @@ int tgt_client_add(const struct lu_env *env,  struct obd_export *exp, int idx)
 
 	ENTRY;
 
-	LASSERT(tgt->lut_client_bitmap != NULL);
+	LASSERT(tgt && tgt->lut_client_bitmap != NULL);
 	LASSERTF(idx >= 0, "%d\n", idx);
 
 	if (!strcmp(ted->ted_lcd->lcd_uuid, tgt->lut_obd->obd_uuid.uuid) ||
@@ -636,6 +642,12 @@ int tgt_client_del(const struct lu_env *env, struct obd_export *exp)
 	ENTRY;
 
 	LASSERT(ted->ted_lcd);
+
+	if (unlikely(tgt == NULL)) {
+		CDEBUG(D_ERROR, "%s: No target for connected export\n",
+		       class_exp2obd(exp)->obd_name);
+		RETURN(-EINVAL);
+	}
 
 	/* XXX if lcd_uuid were a real obd_uuid, I could use obd_uuid_equals */
 	if (!strcmp((char *)ted->ted_lcd->lcd_uuid,
